--- a/redux business cards/src/App.css
+++ b/redux business cards/src/App.css
@@ -4,17 +4,17 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-
-  border: 1px solid black;
   width: 100vh;
-}
-
-.displayUsers {
-  /* display: flex;
-  justify-content: flex-start;
-  align-self: flex-start;
-  flex-direction: column; */
-  /* margin-top: 20px; */
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+  width: 100%;
+  min-width: 1200px;
+  height: 100%;
+  padding: 0;
+  background: #fff;
 }
 
 .displayUsers div {
@@ -22,9 +22,8 @@
   height: 150px;
   padding: 20px;
   margin: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
+  border: 1px solid black;
 }
 
 .user-occupation {
@@ -41,4 +40,32 @@
 
 .delete-card {
   font-size: 10px;
+}
+
+.create-btn {
+  background-color: rgb(0, 0, 0);
+  color: #fff;
+  margin-left: 10px;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+
+.update-btn {
+  background-color: rgb(246, 255, 0);
+  color: #000000;
+  /* padding: 0.2rem; */
+  font-size: 13px;
+  margin-left: 10px;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+
+.create-btn:hover {
+  background-color: rgba(0, 0, 0, 0.305);
+}
+.update-btn:hover {
+  background-color: rgb(119, 0, 255);
+  color: white;
 }
